--- a/butter/Base.lproj/Main.storyboard
+++ b/butter/Base.lproj/Main.storyboard
@@ -136,7 +136,11 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="avatarImageView" destination="4Mb-si-Bcd" id="0p9-0v-5OH"/>
                                             <outlet property="nameLabel" destination="FhB-eC-ynS" id="w42-vd-wB0"/>
+                                            <outlet property="timeAgoLabel" destination="fYb-Vq-aDh" id="gnh-Uw-tRd"/>
+                                            <outlet property="tweetLabel" destination="iMb-5O-0nx" id="8c7-gx-iq8"/>
+                                            <outlet property="usernameLabel" destination="njp-cN-ATb" id="PuZ-4j-jCc"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
