--- a/butter/Base.lproj/Main.storyboard
+++ b/butter/Base.lproj/Main.storyboard
@@ -201,28 +201,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ben Kallman" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EHy-M1-swi">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ben Kallman" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EHy-M1-swi">
                                 <rect key="frame" x="72" y="72" width="72" height="15"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Feo-wG-d9p">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Feo-wG-d9p">
                                 <rect key="frame" x="16" y="72" width="48" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="KVf-0W-NIR"/>
+                                    <constraint firstAttribute="width" constant="48" id="xba-CT-Ywq"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="@benkallman" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MUh-lf-gXe">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@benkallman" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MUh-lf-gXe">
                                 <rect key="frame" x="72" y="88" width="74" height="15"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.69391177400000004" green="0.69391177400000004" blue="0.69391177400000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h03-gn-e8W">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h03-gn-e8W">
                                 <rect key="frame" x="16" y="128" width="288" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="h03-gn-e8W" firstAttribute="leading" secondItem="VlI-XA-vP3" secondAttribute="leading" constant="16" id="1pD-SY-4Vi"/>
+                            <constraint firstItem="MUh-lf-gXe" firstAttribute="top" secondItem="EHy-M1-swi" secondAttribute="bottom" constant="1" id="2et-WK-T2K"/>
+                            <constraint firstItem="Feo-wG-d9p" firstAttribute="top" secondItem="CM4-fu-LJ7" secondAttribute="bottom" constant="8" id="2ou-fD-Lxm"/>
+                            <constraint firstItem="MUh-lf-gXe" firstAttribute="leading" secondItem="Feo-wG-d9p" secondAttribute="trailing" constant="8" id="Jne-4h-eIB"/>
+                            <constraint firstItem="EHy-M1-swi" firstAttribute="top" secondItem="CM4-fu-LJ7" secondAttribute="bottom" constant="8" id="V4L-BS-5PX"/>
+                            <constraint firstItem="EHy-M1-swi" firstAttribute="leading" secondItem="Feo-wG-d9p" secondAttribute="trailing" constant="8" id="Wnc-qc-yfq"/>
+                            <constraint firstItem="h03-gn-e8W" firstAttribute="top" secondItem="Feo-wG-d9p" secondAttribute="bottom" constant="8" id="fH3-nU-mHe"/>
+                            <constraint firstItem="Feo-wG-d9p" firstAttribute="leading" secondItem="VlI-XA-vP3" secondAttribute="leading" constant="16" id="jwA-DQ-NXn"/>
+                            <constraint firstAttribute="trailing" secondItem="h03-gn-e8W" secondAttribute="trailing" constant="16" id="s2Z-0p-2xs"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qqY-HB-A0w">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="9og-PO-QS1">
@@ -241,6 +256,7 @@
                     <connections>
                         <outlet property="avatarImageView" destination="Feo-wG-d9p" id="3BK-BD-bu3"/>
                         <outlet property="nameLabel" destination="EHy-M1-swi" id="4HO-Oj-bEu"/>
+                        <outlet property="tweetTextField" destination="h03-gn-e8W" id="CV1-qD-VMW"/>
                         <outlet property="usernameLabel" destination="MUh-lf-gXe" id="OBR-yh-RsJ"/>
                     </connections>
                 </viewController>
